@@ -8,6 +8,10 @@
 // you need to specify the IP address you wish to export to the entire world.
 //
 //login_ip:127.0.0.1
+
+// What interface should we bind to.. if you have multiple IP's on one
+// machine,  this lets you put multiple servers on the same ports
+// bind_ip:127.0.0.1
  
 // Login Server Port
 login_port: 6900
