@@ -30,6 +30,10 @@ passwd: p1
 //
 //char_ip:127.0.0.1
 
+// What interface should we bind to.. if you have multiple IP's on one
+// machine,  this lets you put multiple servers on the same ports
+// bind_ip:127.0.0.1
+
 // Character Server Port
 char_port: 6121
 
